force-app/main/default/objects/CQ_Domain_Action_Binding__mdt/fields/DomainActionImplementation__c.field-meta.xml
<CustomField>
    <fullName>DomainActionImplementation__c</fullName>
    <description>What cq_IDomainAction class to .Execute</description>
    <inlineHelpText>What cq_IDomainAction class to .Execute</inlineHelpText>
    <label>DomainActionImplementation</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>