force-app/main/default/objects/CQ_Domain_Action_Binding__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>The SObject to process the Trigger action for</description>
    <inlineHelpText>The SObject to process the Trigger action for</inlineHelpText>
    <label>SObject</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>