force-app/main/default/objects/CQ_Domain_Action_Binding__mdt/fields/WhenToProcess__c.field-meta.xml
<CustomField>
    <fullName>WhenToProcess__c</fullName>
    <label>WhenToProcess</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before</fullName>
                <default>true</default>
                <label>Before</label>
            </value>
            <value>
                <fullName>After</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>